--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -8,24 +8,24 @@
         <title>EmyCar</title>
 
         <!--=== Bootstrap CSS ===-->
-        <link href="../../static/assets/css/bootstrap.min.css" rel="stylesheet">
+        <link th:href="@{/assets/css/bootstrap.min.css}" rel="stylesheet">
         <!--=== Slicknav CSS ===-->
-        <link href="../../static/assets/css/plugins/slicknav.min.css" rel="stylesheet">
+        <link th:href="@{/assets/css/plugins/slicknav.min.css}" rel="stylesheet">
         <!--=== Magnific Popup CSS ===-->
-        <link href="../../static/assets/css/plugins/magnific-popup.css" rel="stylesheet">
+        <link th:href="@{/assets/css/plugins/magnific-popup.css}" rel="stylesheet">
         <!--=== Owl Carousel CSS ===-->
-        <link href="../../static/assets/css/plugins/owl.carousel.min.css" rel="stylesheet">
+        <link th:href="@{/assets/css/plugins/owl.carousel.min.css}" rel="stylesheet">
         <!--=== Gijgo CSS ===-->
-        <link href="../../static/assets/css/plugins/gijgo.css" rel="stylesheet">
+        <link th:href="@{/assets/css/plugins/gijgo.css}" rel="stylesheet">
         <!--=== FontAwesome CSS ===-->
-        <link href="../../static/assets/css/font-awesome.css" rel="stylesheet">
+        <link th:h:href="@{/assets/css/font-awesome.css}" rel="stylesheet">
         <!--=== Theme Reset CSS ===-->
-        <link href="../../static/assets/css/reset.css" rel="stylesheet">
+        <link th:href="@{/assets/css/reset.css}" rel="stylesheet">
         <!--=== Main Style CSS ===-->
-        <link href="../../static/style.css" rel="stylesheet" type="text/css">
+        <link th:href="@{/style.css}" rel="stylesheet" type="text/css">
         <!--=== Responsive CSS ===-->
-        <link href="../../static/assets/css/responsive.css" rel="stylesheet">
+        <link th:href="@{/assets/css/responsive.css}" rel="stylesheet">
         <!--=== Jquery Min Js ===-->
-        <script src="../../static/assets/js/jquery-3.2.1.min.js"></script>
+        <script src="/assets/js/jquery-3.2.1.min.js"></script>
     </head>
 </th:block>
