--- a/src/main/resources/templates/authentication/login.html
+++ b/src/main/resources/templates/authentication/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:include="~{../fragments/head}"></th:block>
-    <th:block th:include="~{../fragments/anonymous-navbar}"></th:block>
+    <th:block th:include="~{/fragments/head}"></th:block>
+    <th:block th:include="~{/fragments/anonymous-navbar}"></th:block>
 </head>
 <body>
 
@@ -56,6 +56,6 @@
 </section>
 <!--== Login Page Content End ==-->
 
-<th:block th:include="~{../fragments/footer}"></th:block>
+<th:block th:include="~{/fragments/footer}"></th:block>
 </body>
 </html>
