--- a/src/main/resources/templates/authentication/register.html
+++ b/src/main/resources/templates/authentication/register.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:include="~{../fragments/head}"></th:block>
-    <th:block th:include="~{../fragments/anonymous-navbar}"></th:block>
+    <th:block th:include="~{/fragments/head}"></th:block>
+    <th:block th:include="~{/fragments/anonymous-navbar}"></th:block>
 </head>
 <body>
 
@@ -34,22 +34,28 @@
                 <div class="login-page-content">
                     <div class="login-form">
                         <h3>Sign Up</h3>
-                        <form action="#">
+                        <form method="post" th:action="@{/users/register}" th:object="${userRegisterBindingModel}">
                             <div class="name">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input type="text" placeholder="First Name">
+                                        <input type="text" placeholder="First Name" th:field="*{firstName}">
                                     </div>
                                     <div class="col-md-6">
-                                        <input type="text" placeholder="Last Name">
+                                        <input type="text" placeholder="Last Name" th:field="*{lastName}">
                                     </div>
                                 </div>
                             </div>
                             <div class="username">
-                                <input type="email" placeholder="Email">
+                                <input type="text" placeholder="Username" th:field="*{username}">
+                            </div>
+                            <div class="username">
+                                <input type="email" placeholder="Email" th:field="*{email}">
                             </div>
                             <div class="password">
-                                <input type="password" placeholder="Password">
+                                <input type="password" placeholder="Password" th:field="*{password}">
+                            </div>
+                            <div class="password">
+                                <input type="password" placeholder="Confirm Password" th:field="*{confirmPassword}">
                             </div>
                             <div class="log-btn">
                                 <button type="submit"><i class="fa fa-check-square"></i> Sign Up</button>
@@ -66,6 +72,6 @@
 </section>
 <!--== Register Page Content End ==-->
 
-<th:block th:include="~{../fragments/footer}"></th:block>
+<th:block th:include="~{/fragments/footer}"></th:block>
 </body>
 </html>
