--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2239,6 +2239,12 @@ body,
 }
 
 /*== Car List CSS ==*/
+/*.car-list{*/
+/*	object-fit: cover;*/
+/*	display: block;*/
+/*	height: 300px;*/
+/*	max-height: 100%;*/
+/*}*/
 
 .single-car-wrap {
 	-webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
