--- a/src/main/resources/templates/authentication/register.html
+++ b/src/main/resources/templates/authentication/register.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:include="~{/fragments/head}"></th:block>
-    <th:block th:include="~{/fragments/anonymous-navbar}"></th:block>
+    <th:block th:include="~{fragments/head}"></th:block>
 </head>
 <body>
 
@@ -15,9 +14,6 @@
                 <div class="section-title  text-center">
                     <h2>Register</h2>
                     <span class="title-line"><i class="fa fa-car"></i></span>
-                    <br>
-                    <br>
-                    <h4>EmyCar - car rental system</h4>
                 </div>
             </div>
             <!-- Page Title End -->
@@ -72,6 +68,6 @@
 </section>
 <!--== Register Page Content End ==-->
 
-<th:block th:include="~{/fragments/footer}"></th:block>
+<th:block th:include="~{fragments/footer}"></th:block>
 </body>
 </html>
