--- a/src/main/resources/templates/fragments/anonymous-navbar.html
+++ b/src/main/resources/templates/fragments/anonymous-navbar.html
@@ -45,8 +45,8 @@
                 <!--== Logo Start ==-->
                 <div class="col-lg-4">
                     <a href="#" class="logo">
-                        <img src="../../static/assets/img/logo6.png" alt="JSOFT">
-                        <img src="../../static/assets/img/name3.png" alt="JSOFT">
+                        <img src="https://i.ibb.co/PmRTp37/logo6.png" alt="JSOFT">
+                        <img src="https://i.ibb.co/YZqP6Qg/name3.png" alt="JSOFT">
                     </a>
                 </div>
                 <!--== Logo End ==-->
