--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
                         <th:block th:each="car : ${cars}">
                         <div class="col-lg-6 col-md-6">
                             <div class="single-car-wrap">
-                                <div class="car-list-thumb" th:style="'background-image:url(\'' + @{car.picture} + '\');'"></div>
+                                <div class="car-list-thumb" th:style="|background-image:url(${car.picture})|"></div>
                                 <div class="car-list-info without-bar">
                                     <h2><a href="#" th:text="|${car.make} ${car.model}|"></a></h2>
                                     <h5 th:text="|${car.price}  Rent /per a day|"></h5>
