continued fixing front-end

--- a/src/main/resources/templates/car/create-car.html
+++ b/src/main/resources/templates/car/create-car.html
@@ -84,7 +84,7 @@
                                 </select>
                             </div>
                             <div class="log-btn">
-                                <button type="submit">Create</button>
+                                <button type="submit" th:href="/cars/create">Create</button>
                             </div>
                         </form>
                     </div>
