--- a/src/main/resources/templates/fragments/logged-in-navbar.html
+++ b/src/main/resources/templates/fragments/logged-in-navbar.html
@@ -26,10 +26,9 @@
                 <!--== Social Icons Start ==-->
                 <div class="col-lg-3 text-right">
                     <div class="header-social-icons">
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://web.facebook.com/milena.damesova?fref=search&__tn__=%2Cd%2CP-R&eid=ARAF8jbRa04rbUU-rRf9rpzvBwQ6DQohFFIvKEO7JEywlFZegZ_ye195g_OkdjnwfxRUfVQ7ItNMsksq"><i class="fa fa-facebook"></i></a>
+                        <a href="https://web.facebook.com/profile.php?id=100001042664610&__tn__=%2Cd-]-h-R&eid=ARAJgpH_Mj9VMZtHcsArrvddchYQLNPDEMdTX5SmhjbUMKg8pRtrZCME95yy61scFhBoEz2PcBAnO-Wi"><i class="fa fa-facebook"></i></a>
+                        <a href="https://web.facebook.com/yoana.borissova"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
                 <!--== Social Icons End ==-->
@@ -45,8 +44,8 @@
                 <!--== Logo Start ==-->
                 <div class="col-lg-4">
                     <a href="#" class="logo">
-                        <img src="../../static/assets/img/logo6.png" alt="JSOFT">
-                        <img src="../../static/assets/img/name3.png" alt="JSOFT">
+                        <img src="https://i.ibb.co/PmRTp37/logo6.png" alt="JSOFT">
+                        <img src="https://i.ibb.co/YZqP6Qg/name3.png" alt="JSOFT">
                     </a>
                 </div>
                 <!--== Logo End ==-->
@@ -55,11 +54,11 @@
                 <div class="col-lg-8 d-none d-xl-block">
                     <nav class="mainmenu alignright">
                         <ul>
-                            <li><a href="#">My Cars</a></li>
-                            <li><a href="#">My Rented Cars</a></li>
-                            <li><a href="#">Rented By Me</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Logout</a></li>
+                            <li><a href="/cars/mine">My Cars</a></li>
+                            <li><a href="/rents/fromme">My Rented Cars</a></li>
+                            <li><a href="/rents/byme">Rented By Me</a></li>
+                            <li><a href="/about">About Us</a></li>
+                            <li><a href="/logout">Logout</a></li>
                         </ul>
                     </nav>
                 </div>
