--- a/src/main/resources/templates/car/create-car.html
+++ b/src/main/resources/templates/car/create-car.html
@@ -29,7 +29,7 @@
 <section id="lgoin-page-wrap" class="section-padding">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-md-8 m-auto">
+            <div class="col-lg-6 col-md-10 m-auto">
                 <div class="login-page-content">
                     <div class="login-form">
                         <h3>Add your car info here</h3>
@@ -50,43 +50,57 @@
                                 <input type="text" placeholder="Fuel Consumption" name="fuelConsumption">
                             </div>
                             <div class="username">
-                                <input type="number" placeholder="Horsepower" name="horsepower">
+                                <input type="number" placeholder="Horsepower" name="horsepower" min="1">
                             </div>
                             <div class="username">
                                 <input type="text" placeholder="Image URL" name="picture">
                             </div>
+
                             <div class="username">
-                                <input type="checkbox" value="true" name="hasAC">AC
-                            </div>
-                            <div class="dropdown">
-                                <select id="" name="transmission" class="selectpicker">
-                                    <option value="Auto">Auto</option>
-                                    <option value="Manual">Manual</option>
-                                </select>
+                                <input type="number" placeholder="Number of Doors" name="doors" min="1" max="10">
                             </div>
                             <div class="username">
-                                <input type="number" placeholder="Number of Doors" name="doors">
+                                <input type="text" placeholder="Number of passengers" name="passengers" min="1">
                             </div>
                             <div class="username">
-                                <input type="text" placeholder="Number of passengers" name="passengers">
+                                <input type="number" placeholder="Price per day" name="price" min="1" max="10000">
+                            </div>
+                            <div class="form-group purple-border">
+                                <textarea class="form-control" placeholder="Description" name="description"></textarea>
                             </div>
                             <div class="username">
-                                <input type="number" placeholder="Price per day" name="price">
-                            </div>
-                            <div class="username">
-                                <textarea placeholder="Description" name="description"></textarea>
-                            </div>
-                            <div class="dropdown">
-                                <select name="category" class="selectpicker">
+                                <select name="category" class="browser-default custom-select">
                                     <option value="Small">Small</option>
                                     <option value="Midsize">Midsize</option>
                                     <option value="Large">Large</option>
                                 </select>
                             </div>
+                            <br>
+                            <div class="username">
+                                <select id="" name="transmission" class="browser-default custom-select">
+                                    <option value="Auto">Auto</option>
+                                    <option value="Manual">Manual</option>
+                                </select>
+                            </div>
+                            <br>
+                            <!--<div class="form-check">-->
+                                <!--<label class="form-check-label">AC</label>-->
+                                <!--<input type="checkbox" class="form-check-input"  value="true" name="hasAC">-->
+                            <!--</div>-->
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Default radio
+                                </label>
+                            </div>
                             <div class="log-btn">
-                                <button type="submit" th:href="/cars/create">Create</button>
+                                <button type="submit" href="/cars/create">Create</button>
                             </div>
                         </form>
+                    </div>
+                    <div class="create-ac">
+                        <br>
+                        <p>We offer you best service and data security 🤣</p>
                     </div>
                 </div>
             </div>
