--- a/src/main/resources/templates/fragments/anonymous-navbar.html
+++ b/src/main/resources/templates/fragments/anonymous-navbar.html
@@ -55,9 +55,9 @@
                 <div class="col-lg-8 d-none d-xl-block">
                     <nav class="mainmenu alignright">
                         <ul>
-                            <li><a href="/users/login">Login</a></li>
-                            <li><a href="/users/register">Register</a></li>
-                            <li><a href="/about">About Us</a></li>
+                            <li><a target="_blank" href="/users/login">Login</a></li>
+                            <li><a target="_blank" href="/users/register">Register</a></li>
+                            <li><a target="_blank" href="">About Us</a></li>
                         </ul>
                     </nav>
                 </div>
