--- a/src/main/resources/templates/fragments/logged-in-navbar.html
+++ b/src/main/resources/templates/fragments/logged-in-navbar.html
@@ -26,9 +26,9 @@
                 <!--== Social Icons Start ==-->
                 <div class="col-lg-3 text-right">
                     <div class="header-social-icons">
-                        <a href="https://web.facebook.com/milena.damesova?fref=search&__tn__=%2Cd%2CP-R&eid=ARAF8jbRa04rbUU-rRf9rpzvBwQ6DQohFFIvKEO7JEywlFZegZ_ye195g_OkdjnwfxRUfVQ7ItNMsksq"><i class="fa fa-facebook"></i></a>
-                        <a href="https://web.facebook.com/profile.php?id=100001042664610&__tn__=%2Cd-]-h-R&eid=ARAJgpH_Mj9VMZtHcsArrvddchYQLNPDEMdTX5SmhjbUMKg8pRtrZCME95yy61scFhBoEz2PcBAnO-Wi"><i class="fa fa-facebook"></i></a>
-                        <a href="https://web.facebook.com/yoana.borissova"><i class="fa fa-facebook"></i></a>
+                        <a target="_blank" href="https://web.facebook.com/milena.damesova?fref=search&__tn__=%2Cd%2CP-R&eid=ARAF8jbRa04rbUU-rRf9rpzvBwQ6DQohFFIvKEO7JEywlFZegZ_ye195g_OkdjnwfxRUfVQ7ItNMsksq"><i class="fa fa-facebook"></i></a>
+                        <a target="_blank" href="https://web.facebook.com/profile.php?id=100001042664610&__tn__=%2Cd-]-h-R&eid=ARAJgpH_Mj9VMZtHcsArrvddchYQLNPDEMdTX5SmhjbUMKg8pRtrZCME95yy61scFhBoEz2PcBAnO-Wi"><i class="fa fa-facebook"></i></a>
+                        <a target="_blank" href="https://web.facebook.com/yoana.borissova"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
                 <!--== Social Icons End ==-->
@@ -57,7 +57,8 @@
                             <li><a href="/cars/mine">My Cars</a></li>
                             <li><a href="/rents/fromme">My Rented Cars</a></li>
                             <li><a href="/rents/byme">Rented By Me</a></li>
-                            <li><a href="/about">About Us</a></li>
+                            <li><a href="/cars/create">Add a Car</a></li>
+                            <li><a href="">About Us</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
                     </nav>
