--- a/src/main/resources/templates/car/edit-car.html
+++ b/src/main/resources/templates/car/edit-car.html
@@ -13,7 +13,7 @@
             <!-- Page Title Start -->
             <div class="col-lg-12">
                 <div class="section-title  text-center">
-                    <h2>Create a car</h2>
+                    <h2>Edit</h2>
                     <span class="title-line"><i class="fa fa-car"></i></span>
                     <br>
                     <br>
