--- a/src/main/resources/templates/car/my-cars.html
+++ b/src/main/resources/templates/car/my-cars.html
@@ -12,17 +12,11 @@
             <!-- Page Title Start -->
             <div class="col-lg-12">
                 <div class="section-title  text-center">
-                    <div class="book-ur-car">
-                        <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Small</button></a>
-                        </div>
-                        <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Midsize</button></a>
-                        </div>
-                        <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Large</button></a>
-                        </div>
-                    </div>
+                    <h2>My Cars</h2>
+                    <span class="title-line"><i class="fa fa-car"></i></span>
+                    <br>
+                    <br>
+                    <h4>EmyCar - car rental system</h4>
                 </div>
             </div>
             <!-- Page Title End -->
@@ -51,7 +45,7 @@
                                             <li th:text="${car.fuel}"></li>
                                             <li th:text="${car.transmission}"></li>
                                         </ul>
-                                        <a href="#" class="rent-btn">Rent</a>
+                                        <a href="#" class="rent-btn">Details</a>
                                     </div>
                                 </div>
                             </div>
