--- a/src/main/resources/templates/rent/rent-byme.html
+++ b/src/main/resources/templates/rent/rent-byme.html
@@ -12,17 +12,11 @@
             <!-- Page Title Start -->
             <div class="col-lg-12">
                 <div class="section-title  text-center">
-                    <div class="book-ur-car">
-                        <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Small</button></a>
-                        </div>
-                        <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Midsize</button></a>
-                        </div>
-                        <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Large</button></a>
-                        </div>
-                    </div>
+                    <h2>Rented By Me</h2>
+                    <span class="title-line"><i class="fa fa-car"></i></span>
+                    <br>
+                    <br>
+                    <h4>EmyCar - car rental system</h4>
                 </div>
             </div>
             <!-- Page Title End -->
@@ -45,13 +39,12 @@
                                     <div class="car-list-thumb" th:style="|background-image:url(${car.picture})|"></div>
                                     <div class="car-list-info without-bar">
                                         <h2><a href="#" th:text="|${car.make} ${car.model}|"></a></h2>
-                                        <h5 th:text="|${car.price}  Rent /per a day|"></h5>
                                         <ul class="car-info-list">
-                                            <li th:if="${car.hasAC}">AC</li>
-                                            <li th:text="${car.fuel}"></li>
-                                            <li th:text="${car.transmission}"></li>
+                                            <li>Собственик или наемател</li>
+                                            <li>Start Date</li>
+                                            <li>End Date</li>
                                         </ul>
-                                        <a href="#" class="rent-btn">Rent</a>
+                                        <a href="#" class="rent-btn">End - samo ako ima vreme</a>
                                     </div>
                                 </div>
                             </div>
@@ -61,6 +54,7 @@
                     <!-- Car List Content End -->
                 </div>
             </div>
+        </div>
 </section>
 <!--== Car List Area End ==-->
 
