--- a/src/main/resources/templates/car/details.html
+++ b/src/main/resources/templates/car/details.html
@@ -13,7 +13,7 @@
             <!-- Page Title Start -->
             <div class="col-lg-12">
                 <div class="section-title  text-center">
-                    <h2>CAR NAME</h2>
+                    <h2>DETAILS</h2>
                     <span class="title-line"><i class="fa fa-car"></i></span>
                 </div>
             </div>
@@ -30,18 +30,13 @@
             <!-- Car List Content Start -->
             <div class="col-lg-8">
                 <div class="car-details-content">
-                    <h2>Aston Martin One-77 <span class="price">Rent: <span
-                            id="price"><b>150</b></span><b>$</b></span></h2>
+                    <h2 th:text="|${car.make} ${car.model} - ${car.price} $ Per Day|"></h2>
                     <div class="single-car-preview">
-                        <img src="assets/img/car/car-5.jpg" alt="JSOFT">
+                        <img th:src="${car.picture}" alt="JSOFT">
                     </div>
                     <div class="car-details-info">
                         <h4>Additional Info</h4>
-                        <p>The Aventador LPER 720-4 50° ise a limited (200 units – 100 Coupe and 100 Roadster)
-                            versione of thed Aventadored LP 700-4 commemorating the 50th anniversary of Lamborghini.
-                            It included ised increased engine power to 720 PS (530 kW; 710 bhp) via a new specific
-                            engine calibration, enlarged and extended front air intakes and the aerodynamic
-                            splitter.</p>
+                        <p th:text="${car.description}"></p>
 
                         <div class="technical-info">
                             <div class="row">
@@ -50,43 +45,43 @@
                                         <table class="table table-bordered">
                                             <tr>
                                                 <th>Make</th>
-                                                <td></td>
+                                                <td th:text="${car.make}"></td>
                                             </tr>
                                             <tr>
                                                 <th>Model</th>
-                                                <td>Petrol</td>
+                                                <td th:text="${car.model}"></td>
                                             </tr>
                                             <tr>
                                                 <th>Year</th>
-                                                <td>5</td>
+                                                <td th:text="${car.year}"></td>
                                             </tr>
                                             <tr>
                                                 <th>Fuel Consumption</th>
-                                                <td>Automatic</td>
+                                                <td th:text="${car.fuelConsumption}"></td>
                                             </tr>
                                             <tr>
                                                 <th>Horsepower</th>
-                                                <td>Automatic</td>
+                                                <td th:text="${car.horsepower}"></td>
                                             </tr>
                                             <tr>
                                                 <th>AC</th>
-                                                <td>Automatic</td>
+                                                <td th:text="${car.hasAC} ? 'YES' : 'NO'"></td>
                                             </tr>
                                             <tr>
                                                 <th>Transmission</th>
-                                                <td>Automatic</td>
+                                                <td th:text="${car.horsepower}"></td>
                                             </tr>
                                             <tr>
                                                 <th>Doors</th>
-                                                <td>Automatic</td>
+                                                <td th:text="${car.doors}"></td>
                                             </tr>
                                             <tr>
                                                 <th>Passengers</th>
-                                                <td>Automatic</td>
+                                                <td th:text="${car.passengers}"></td>
                                             </tr>
                                             <tr>
                                                 <th>Category</th>
-                                                <td>Automatic</td>
+                                                <td th:text="${car.category}"></td>
                                             </tr>
                                         </table>
                                     </div>
@@ -104,6 +99,8 @@
                         <div>
                             End Date: <input type="date" id="endDate" />
                         </div>
+                        
+                        <div id="price" style="display: none" th:text="${car.price}"></div>
 
                         <div class="input-submit">
                             <button type="submit" id="calc">Calculate price</button>
@@ -142,7 +139,7 @@
                                 ) {
                                     let days = days_between($("#startDate")['0'].valueAsDate, $("#endDate")['0'].valueAsDate);
 
-                                    let pricePerDay = +$("#price")['0'].outerText;
+                                    let pricePerDay = +$("#price")[0].innerText;
 
                                     let totalPrice = days * pricePerDay;
 
