--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,23 +39,26 @@
                 <div class="car-list-content">
                     <div class="row">
                         <!-- Single Car Start -->
-                        <th:block th:each="car : ${cars}">
-                            <div class="col-lg-6 col-md-6">
-                                <div class="single-car-wrap">
-                                    <div class="car-list-thumb" th:style="|background-image:url(${car.picture})|"></div>
-                                    <div class="car-list-info without-bar">
-                                        <h2><a href="#" th:text="|${car.make} ${car.model}|"></a></h2>
-                                        <h5 th:text="|${car.price}  Rent /per a day|"></h5>
-                                        <ul class="car-info-list">
-                                            <li th:if="${car.hasAC}">AC</li>
-                                            <li th:text="${car.fuel}"></li>
-                                            <li th:text="${car.transmission}"></li>
-                                        </ul>
-                                        <a href="#" class="rent-btn">Rent</a>
+                        
+                            <th:block th:each="car : ${cars}">
+                                
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="single-car-wrap">
+                                        <div class="car-list-thumb" th:style="|background-image:url(${car.picture})|"></div>
+                                        <div class="car-list-info without-bar">
+                                            <h2><a href="#" th:text="|${car.make} ${car.model}|"></a></h2>
+                                            <h5 th:text="|${car.price}  Rent /per a day|"></h5>
+                                            <ul class="car-info-list">
+                                                <li th:if="${car.hasAC}">AC</li>
+                                                <li th:text="${car.fuel}"></li>
+                                                <li th:text="${car.transmission}"></li>
+                                            </ul>
+                                            
+                                            <a th:href="@{/cars/details/{id}(id=${car.id})}" class="rent-btn">Rent</a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </th:block>
+                            </th:block>
                         <!-- Single Car End -->
                     </div>
                     <!-- Car List Content End -->
