--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                                                 <li th:text="${car.transmission}"></li>
                                             </ul>
                                             
-                                            <a th:href="@{/cars/details/{id}(id=${car.id})}" class="rent-btn">Rent</a>
+                                            <a th:href="@{/cars/details/{id}(id=${car.id})}" class="rent-btn">Details</a>
                                         </div>
                                     </div>
                                 </div>
