--- a/src/main/resources/templates/car/edit-car.html
+++ b/src/main/resources/templates/car/edit-car.html
@@ -34,40 +34,40 @@
                 <div class="login-page-content">
                     <div class="login-form">
                         <h3>Add your car info here</h3>
-                        <form method="post" th:action="@{/cars/create}">
+                        <form method="post" th:action="@{/cars/edit/{id}(id=${car.id})}">
                             <div class="username">
-                                <input type="text" placeholder="Make" name="make">
+                                <input type="text" placeholder="Make" name="make" th:value="${car.make}">
                             </div>
                             <div class="username">
-                                <input type="text" placeholder="Model" name="model">
+                                <input type="text" placeholder="Model" name="model" th:value="${car.model}">
                             </div>
                             <div class="username">
-                                <input type="number" placeholder="Year" name="year">
+                                <input type="number" placeholder="Year" name="year" th:value="${car.year}">
                             </div>
                             <div class="username">
-                                <input type="text" placeholder="Fuel" name="fuel">
+                                <input type="text" placeholder="Fuel" name="fuel" th:value="${car.fuel}">
                             </div>
                             <div class="username">
-                                <input type="text" placeholder="Fuel Consumption" name="fuelConsumption">
+                                <input type="text" placeholder="Fuel Consumption" name="fuelConsumption" th:value="${car.fuelConsumption}">
                             </div>
                             <div class="username">
-                                <input type="number" placeholder="Horsepower" name="horsepower" min="1">
+                                <input type="number" placeholder="Horsepower" name="horsepower" min="1" th:value="${car.horsepower}">
                             </div>
                             <div class="username">
-                                <input type="text" placeholder="Image URL" name="picture">
+                                <input type="text" placeholder="Image URL" name="picture" th:value="${car.picture}">
                             </div>
 
                             <div class="username">
-                                <input type="number" placeholder="Number of Doors" name="doors" min="1" max="10">
+                                <input type="number" placeholder="Number of Doors" name="doors" min="1" max="10" th:value="${car.doors}">
                             </div>
                             <div class="username">
-                                <input type="text" placeholder="Number of passengers" name="passengers" min="1">
+                                <input type="text" placeholder="Number of passengers" name="passengers" min="1" th:value="${car.passengers}">
                             </div>
                             <div class="username">
-                                <input type="number" placeholder="Price per day" name="price" min="1" max="10000">
+                                <input type="number" placeholder="Price per day" name="price" min="1" max="10000" th:value="${car.price}">
                             </div>
                             <div class="form-group purple-border">
-                                <textarea class="form-control" placeholder="Description" name="description"></textarea>
+                                <textarea class="form-control" placeholder="Description" name="description" th:text="${car.description}"></textarea>
                             </div>
                             <div class="username">
                                 <select name="category" class="browser-default custom-select">
@@ -94,7 +94,7 @@
                                 <label class="form-check-label">AC</label>
                             </div>
                             <div class="log-btn">
-                                <button type="submit" href="/cars/create">Create</button>
+                                <button type="submit" >Edit</button>
                             </div>
                         </form>
                     </div>
