--- a/src/main/resources/templates/fragments/anonymous-navbar.html
+++ b/src/main/resources/templates/fragments/anonymous-navbar.html
@@ -44,7 +44,7 @@
 
                 <!--== Logo Start ==-->
                 <div class="col-lg-4">
-                    <a href="#" class="logo">
+                    <a href="/" class="logo">
                         <img src="https://i.ibb.co/PmRTp37/logo6.png" alt="JSOFT">
                         <img src="https://i.ibb.co/YZqP6Qg/name3.png" alt="JSOFT">
                     </a>
@@ -57,7 +57,6 @@
                         <ul>
                             <li><a href="/users/login">Login</a></li>
                             <li><a href="/users/register">Register</a></li>
-                            <li><a href="">About Us</a></li>
                         </ul>
                     </nav>
                 </div>
