--- a/src/main/resources/templates/fragments/logged-in-navbar.html
+++ b/src/main/resources/templates/fragments/logged-in-navbar.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <!--== Logo Start ==-->
                 <div class="col-lg-4">
-                    <a href="#" class="logo">
+                    <a href="/" class="logo">
                         <img src="https://i.ibb.co/PmRTp37/logo6.png" alt="JSOFT">
                         <img src="https://i.ibb.co/YZqP6Qg/name3.png" alt="JSOFT">
                     </a>
@@ -58,7 +58,6 @@
                             <li><a href="/rents/fromme">My Rented Cars</a></li>
                             <li><a href="/rents/byme">Rented By Me</a></li>
                             <li><a href="/cars/create">Add a Car</a></li>
-                            <li><a href="">About Us</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
                     </nav>
